修改了网站前台页面的静态内容

--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Atlanta is a modern and fully responsive Template by WebThemez.">
 	<meta name="author" content="webThemez.com">	
-	<title>公司首页</title>
+	<title>DeColor</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template">{#替换公司logo}</a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -50,23 +50,19 @@
             <div class="banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
-                        <h2>{#替换第一屏1}Responsive Website</h2>
-                        <p>{#替换第一屏1.1}Amazing free responsive website for free, use it for your personal or commercial needs</p>
+                        <h2 class="text-center">Ink Cartridges</h2>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>{#替换第一屏2}Bootstrap</h2>
-                        <p>{#替换第一屏2.1}Bootstrap, a sleek, intuitive, and powerful mobile first front-end framework.</p>
+                        <h2 class="text-center">Drum Cartridges</h2>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>{#替换第一屏3}HTML5/CSS3</h2>
-                        <p>{#替换第一屏3.1}HTML5 is a markup language used for structuring and presenting content for the World Wide Web.</p>
+                        <h2 class="text-center">Copier Toner Cartridges</h2>
                         <div class="da-img"></div>
                     </div>
                     <div class="da-slide">
-                        <h2>{#替换第一屏4}JavaScript/jQuery</h2>
-                        <p>{#替换第一屏4.1}jQuery: The Write Less, Do More, JavaScript Library.</p>
+                        <h2 class="text-center">Empty Ink and Toner Cartridges</h2>
                         <div class="da-img"></div>
                     </div>
                     <nav class="da-arrows">
@@ -80,45 +76,45 @@
 	<!-- /Header -->
 
 	<!-- Intro -->
-	<div class="container text-center">
+	<!--<div class="container text-center">
 		<br> 
 		<h2 >{#替换第二屏1}Atlanta is a modern and fully responsive Template by WebThemez.</h2>
 		<p class="text-muted">
 			{#替换第二屏2}Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies<br/>
 			Sed elit imperdiet congue. Integer ultricies sed ligula eget tempus.
 		</p>
-	</div>
+	</div>-->
 	<!-- /Intro-->
 		
 	<!-- Highlights - jumbotron -->
 	<div class="jumbotron top-space">
 		<div class="container">
 			
-			<h3 class="text-center">{#替换第三屏1}Here is our core Services</h3>
+			<h2 class="text-center">Here are our products</h2>
 			
 			<div class="row">
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-arrows fa-2x circle"></i>{#替换第三屏2}Responsive Design</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-tint fa-2x circle"></i>Ink Cartridges</h4></div>
 					<div class="h-body text-center">
-						<p>{#替换第三屏2.1}Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-css3 fa-2x circle"></i>{#替换第三屏3}HTML5/CSS3</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-tint fa-2x circle"></i>Drum Cartridges</h4></div>
 					<div class="h-body text-center">
-						<p>{#替换第三屏3.1}Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-lightbulb-o fa-2x circle"></i>{#替换第三屏4}JavaScript jQuery</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-tint fa-2x circle"></i>Copier Toner Cartridges</h4></div>
 					<div class="h-body text-center">
-						<p>{#替换第三屏4.1}Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
+						<p></p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-desktop fa-2x circle"></i>{#替换第三屏5}Web Designing</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-tint fa-2x circle"></i>Empty Ink and Toner Cartridges</h4></div>
 					<div class="h-body text-center">
-						<p>{#替换第三屏5.1}Nullam ac rhoncus sapien, non gravida purus. Alinon elit imperdiet congue. Integer ultricies sed elit imperdiet congue. Integer ultricies sed ligula eget tempus.</p>
+						<p></p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
@@ -131,29 +127,29 @@
 	<div class="container">
             <div class="heading text-center">
                 <!-- Heading -->
-                <h2>{#替换第四屏1}Our Company</h2>
-                <p>{#替换第四屏1.1}At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
-            </div>
-            <div>                
-                <p>{#替换第四屏1.2}Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. </p>
+                <h2>Our Company</h2>
             </div>
             <div class="row iconColor">
                 <div class="col-md-4 col-sm-4">
-                    <h3><i class="fa fa-desktop color"></i>&nbsp;{#替换第四屏2} What we do?</h3>
+                    <h3><i class="fa fa-desktop color"></i>&nbsp; What we do?</h3>
                     <!-- Paragraph -->
-                    <p>{#替换第四屏2.1}Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
-                    <h3><i class="fa fa-cloud color"></i>&nbsp;{#替换第四屏3}Why choose us?</h3>
+                    <h3><i class="fa fa-cloud color"></i>&nbsp;Why choose us?</h3>
                     <!-- Paragraph -->
-                    <p>{#替换第四屏3.1}Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>Stringent quality control assures page yield and quality comparable to OEMs.
+						We have the state-of-the-art facility to remanufacture the Cartridges.
+						We use high quality raw material and components.
+						Each cartridge is tested before being shipped.
+                    </p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
-                    <h3><i class="fa fa-home color"></i>&nbsp;{#替换第四屏4}Where are we?</h3>
+                    <h3><i class="fa fa-home color"></i>&nbsp;Where are we?</h3>
                     <!-- Paragraph -->
-                    <p>{#替换第四屏4.1}Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</p>
                 </div>
             </div>
         </div>
@@ -166,26 +162,25 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 panel">
-						<h3 class="panel-title">{#替换底部1}About Atlanta</h3>
+						<h3 class="panel-title">About DeColor</h3>
 						<div class="panel-body">
-							<p>{#替换底部1.1}Lorem ipsum dolor amet, consectetur adipiscing elit. Aenean leo lectus sollicitudin convallis eget libero. Aliquam laoreet tellus ut libero semper, egestas velit malesuada. Sed non risus eget dolor amet vestibulum ullamcorper. Integer feugiat molestie.</p> 
+							<p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p> 
 						</div>
 					</div>
 
 					<div class="col-md-4 panel contact"> 
-						<h3 class="panel-title">{#替换底部2}Contact Info</h4>
+						<h3 class="panel-title">Contact Info</h4>
 						<div class="panel-body">
-						<p>{#替换底部2.1}Lorem ipsum dolor amet, consectetur adipiscing ipsum dolor.</p>
 						<ul>
-						  <li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						  <li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
+						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
 						</ul> 
 						</div>
 					</div>
 
 					<div class="col-md-3 panel">
-						<h3 class="panel-title">{#替换底部3}Follow me</h3>
+						<h3 class="panel-title">Follow me</h3>
 						<div class="panel-body">
 							<p class="follow-me-icons">
 								<a href=""><i class="fa fa-twitter fa-2"></i></a>
@@ -222,7 +217,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="text-right">
-								Copyright &copy; 2016.Company name All rights reserved.More Templates <a href="#" target="_blank" title="公司首页">公司首页</a> - Collect from <a href="#" title="公司首页" target="_blank">公司首页</a> 
+								Copyright &copy; 2018.Company name All rights reserved <a href="#" target="_blank" title="公司首页">公司首页</a>
 							</p>
 						</div>
 					</div>
