--- a/src/main/resources/public/csm/about.html
+++ b/src/main/resources/public/csm/about.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Atlanta is a modern and fully responsive Template by WebThemez.">
 	<meta name="author" content="webThemez.com">	
-	<title>Atlanta</title>
+	<title>DeColor</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template">{#替换公司logo}</a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -59,19 +59,16 @@
 			<!-- Article main content -->
 			<article class="col-sm-9 maincontent pull-right">
 				<header class="page-header">
-					<h1 class="page-title">{#替换第一屏1}About us</h1>
+					<h1 class="page-title">About us</h1>
 				</header>
-				<h3>{#替换第一屏1.1}Our Company</h3>
-				<p><img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300" > Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
-				<p>Consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
-				<h3>{#替换第一屏1.2}Company Goals</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-				<h3>{#替换第一屏1.3}Team</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia voluptatem natus velit fugiat omnis rem eos sapiente quasi quaerat aspernatur quisquam deleniti accusantium laboriosam odio id?</p>
-				<h3>{#替换第一屏1.4}Public News</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente., consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
-				
+				<h3>Our Company</h3>
+				<p><img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300" > De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p>
+				<h3>Why choose us</h3>
+				<p>Stringent quality control assures page yield and quality comparable to OEMs.
+					We have the state-of-the-art facility to remanufacture the Cartridges.
+					We use high quality raw material and components.
+					Each cartridge is tested before being shipped
+					</p>
 			</article>
 			<!-- /Article -->
 			
@@ -79,13 +76,9 @@
 			<aside class="col-sm-3 sidebar sidebar-right">
 
 				<div class="panel">
-					<h4>{#替换第二屏1}About us</h4>
+					<h4>About us</h4>
 					<ul class="list-unstyled list-spaces">
-						<li><a href="#">{#替换第二屏1.1}Responsive Design</a><br><span class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</span></li>
-						<li><a href="#">{#替换第二屏1.2}HTML5, CSS3 and JavaScript</a><br><span class="small text-muted">Consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam</span></li>
-						<li><a href="#">{#替换第二屏1.3}Bootstrap</a><br><span class="small text-muted">Eveniet, consequuntur eius repellendus eos aliquid molestiae ea</span></li>
-						<li><a href="#">{#替换第二屏1.4}Clean Template</a><br><span class="small text-muted">Sed, mollitia earum debitis est itaque esse reiciendis amet cupiditate.</span></li>
-						<li><a href="#">{#替换第二屏1.5}Premium Quality</a><br><span class="small text-muted">Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</span></li>
+						<li><a href="#">Our Company</a><br><span class="small text-muted">De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with</span></li>
 					</ul>
 				</div>
 
@@ -101,26 +94,25 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 panel">
-						<h3 class="panel-title">{#替换底部1}About Atlanta</h3>
+						<h3 class="panel-title">About DeColor</h3>
 						<div class="panel-body">
-							<p>{#替换底部1.1}Lorem ipsum dolor amet, consectetur adipiscing elit. Aenean leo lectus sollicitudin convallis eget libero. Aliquam laoreet tellus ut libero semper, egestas velit malesuada. Sed non risus eget dolor amet vestibulum ullamcorper. Integer feugiat molestie.</p> 
+							<p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p> 
 						</div>
 					</div>
 
 					<div class="col-md-4 panel contact"> 
-						<h3 class="panel-title">{#替换底部2}Contact Info</h4>
+						<h3 class="panel-title">Contact Info</h4>
 						<div class="panel-body">
-						<p>{#替换底部2.1}Lorem ipsum dolor amet, consectetur adipiscing ipsum dolor.</p>
 						<ul>
-						  <li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						  <li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
+						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
 						</ul> 
 						</div>
 					</div>
 
 					<div class="col-md-3 panel">
-						<h3 class="panel-title">{#替换底部3}Follow me</h3>
+						<h3 class="panel-title">Follow me</h3>
 						<div class="panel-body">
 							<p class="follow-me-icons">
 								<a href=""><i class="fa fa-twitter fa-2"></i></a>
@@ -157,7 +149,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="text-right">
-								Copyright &copy; 2016.Company name All rights reserved.More Templates <a href="#" target="_blank" title="公司首页">公司首页</a> - Collect from <a href="#" title="公司首页" target="_blank">公司首页</a> 
+								Copyright &copy; 2018.Company name All rights reserved <a href="#" target="_blank" title="公司首页">公司首页</a>
 							</p>
 						</div>
 					</div>
