--- a/src/main/resources/public/csm/contact.html
+++ b/src/main/resources/public/csm/contact.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Atlanta is a modern and fully responsive Template by WebThemez.">
 	<meta name="author" content="webThemez.com">	
-	<title>Atlanta</title>
+	<title>DeColor</title>
 	<link rel="favicon" href="assets/images/favicon.png">	
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template">{#替换公司logo}</a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -63,23 +63,23 @@
 				</header>
 				
 				<p>
-					We’d love to hear from you. Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.
+					We’d love to hear from you. Fill out the form below with some info and I will get back to you as soon as I can. Please allow a couple days for me to respond.
 				</p>
 				<br>
 							<!--NOTE: Update your email Id in "contact_me.php" file in order to receive emails from your contact form-->
-		<form name="sentMessage" id="contactForm" novalidate>
+		<form name="sentMessage" id="contactForm"  novalidate> 
 		<div class="control-group">
 		<div class="controls">
 		<input type="text" class="form-control" 
-		placeholder="Full Name" id="name" name="name" required
+		placeholder="Full Name" id="name" required
 		data-validation-required-message="Please enter your name" />
 		<p class="help-block"></p>
 		</div>
 		</div> 	
 		<div class="control-group">
 		<div class="controls">
-		<input type="email" class="form-control" placeholder="Email"
-		id="email" name="email" required
+		<input type="email" class="form-control" placeholder="Email" 
+		id="email" required
 		data-validation-required-message="Please enter your email" />
 		</div>
 		</div> 	
@@ -87,14 +87,14 @@
 		<div class="control-group">
 		<div class="controls">
 		<textarea rows="10" cols="100" class="form-control" 
-		placeholder="Message" id="message" name="message" required
+		placeholder="Message" id="message" required
 		data-validation-required-message="Please enter your message" minlength="5" 
 		data-validation-minlength-message="Min 5 characters" 
 		maxlength="999" style="resize:none"></textarea>
 		</div>
 		</div> 		 
 		<div id="success"> </div> <!-- For success/fail messages -->
-		<button type="button" class="btn btn-primary pull-right" onclick="sendMsg()">Send</button><br />
+		<button type="submit" class="btn btn-primary pull-right">Send</button><br />
 		</form>
 
 			</article>
@@ -104,11 +104,11 @@
 			<aside class="col-sm-3 sidebar sidebar-right">
 
 				<div class="panel contact">
-					<h4>{#替换地址}Address</h4>
+					<h4>Address</h4>
 					<ul>
-						  <li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						  <li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
+						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
 				   </ul> 
 				</div>
 
@@ -124,30 +124,30 @@
 
 	
 	<footer id="footer" class="top-space">
+
 		<div class="footer1">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 panel">
-						<h3 class="panel-title">{#替换底部1}About Atlanta</h3>
+						<h3 class="panel-title">About DeColor</h3>
 						<div class="panel-body">
-							<p>{#替换底部1.1}Lorem ipsum dolor amet, consectetur adipiscing elit. Aenean leo lectus sollicitudin convallis eget libero. Aliquam laoreet tellus ut libero semper, egestas velit malesuada. Sed non risus eget dolor amet vestibulum ullamcorper. Integer feugiat molestie.</p> 
+							<p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p> 
 						</div>
 					</div>
 
 					<div class="col-md-4 panel contact"> 
-						<h3 class="panel-title">{#替换底部2}Contact Info</h3>
+						<h3 class="panel-title">Contact Info</h4>
 						<div class="panel-body">
-						<p>{#替换底部2.1}Lorem ipsum dolor amet, consectetur adipiscing ipsum dolor.</p>
 						<ul>
-						  <li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						  <li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
+						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
 						</ul> 
 						</div>
 					</div>
 
 					<div class="col-md-3 panel">
-						<h3 class="panel-title">{#替换底部3}Follow me</h3>
+						<h3 class="panel-title">Follow me</h3>
 						<div class="panel-body">
 							<p class="follow-me-icons">
 								<a href=""><i class="fa fa-twitter fa-2"></i></a>
@@ -184,7 +184,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="text-right">
-								Copyright &copy; 2016.Company name All rights reserved.More Templates <a href="#" target="_blank" title="公司首页">公司首页</a> - Collect from <a href="#" title="公司首页" target="_blank">公司首页</a> 
+								Copyright &copy; 2018.Company name All rights reserved <a href="#" target="_blank" title="公司首页">公司首页</a>
 							</p>
 						</div>
 					</div>
@@ -204,10 +204,10 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
-	 <!--<script src="contact/jqBootstrapValidation.js"></script>
-	 <script src="contact/contact_me.js"></script>-->
+	 <script src="contact/jqBootstrapValidation.js"></script>
+	 <script src="contact/contact_me.js"></script>
 	<script src="assets/js/custom.js"></script>
-	<script src="assets/js/contact.js"></script>
+	
 	<!-- Google Maps -->
 	<!--<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>-->
 	<script src="assets/js/google-map.js"></script>
