--- a/src/main/resources/public/csm/services.html
+++ b/src/main/resources/public/csm/services.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Atlanta is a modern and fully responsive Template by WebThemez.">
 	<meta name="author" content="webThemez.com">
-	<title>About - Atlanta Bootstrap template</title>
+	<title>DeColor</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -27,7 +27,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template">{#替换公司logo}</a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Atlanta HTML5 template"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -98,26 +98,25 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5 panel">
-						<h3 class="panel-title">{#替换底部1}About Atlanta</h3>
+						<h3 class="panel-title">About DeColor</h3>
 						<div class="panel-body">
-							<p>{#替换底部1.1}Lorem ipsum dolor amet, consectetur adipiscing elit. Aenean leo lectus sollicitudin convallis eget libero. Aliquam laoreet tellus ut libero semper, egestas velit malesuada. Sed non risus eget dolor amet vestibulum ullamcorper. Integer feugiat molestie.</p> 
+							<p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p> 
 						</div>
 					</div>
 
 					<div class="col-md-4 panel contact"> 
-						<h3 class="panel-title">{#替换底部2}Contact Info</h4>
+						<h3 class="panel-title">Contact Info</h4>
 						<div class="panel-body">
-						<p>{#替换底部2.1}Lorem ipsum dolor amet, consectetur adipiscing ipsum dolor.</p>
 						<ul>
-						  <li><i class="fa fa-phone"></i>1-123-345-6789</li>
-						  <li><a href="#"><i class="fa fa-envelope-o"></i> contact@webthemez.com</a></li>
-						  <li><i class="fa fa-flag"></i>123 Smith Drive, Baltimore, MD 21212</li>
+						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
+						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
 						</ul> 
 						</div>
 					</div>
 
 					<div class="col-md-3 panel">
-						<h3 class="panel-title">{#替换底部3}Follow me</h3>
+						<h3 class="panel-title">Follow me</h3>
 						<div class="panel-body">
 							<p class="follow-me-icons">
 								<a href=""><i class="fa fa-twitter fa-2"></i></a>
@@ -154,7 +153,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="text-right">
-								Copyright &copy; 2016.Company name All rights reserved.More Templates <a href="#" target="_blank" title="公司首页">公司首页</a> - Collect from <a href="#" title="公司首页" target="_blank">公司首页</a> 
+								Copyright &copy; 2018.Company name All rights reserved <a href="#" target="_blank" title="公司首页">公司首页</a>
 							</p>
 						</div>
 					</div>
