更新了网站首页的轮播图，对页面进行了微调

--- a/src/main/resources/public/csm/about.html
+++ b/src/main/resources/public/csm/about.html
@@ -57,7 +57,7 @@
 		<div class="row">
 			
 			<!-- Article main content -->
-			<article class="col-sm-9 maincontent pull-right">
+			<article class="col-sm-12 maincontent ">
 				<header class="page-header">
 					<h1 class="page-title">About us</h1>
 				</header>
@@ -73,7 +73,7 @@
 			<!-- /Article -->
 			
 			<!-- Sidebar -->
-			<aside class="col-sm-3 sidebar sidebar-right">
+			<!--<aside class="col-sm-3 sidebar sidebar-right">
 
 				<div class="panel">
 					<h4>About us</h4>
@@ -82,7 +82,7 @@
 					</ul>
 				</div>
 
-			</aside>
+			</aside>-->
 			<!-- /Sidebar -->
 
 		</div>
