--- a/src/main/resources/public/csm/news.html
+++ b/src/main/resources/public/csm/news.html
@@ -51,7 +51,7 @@
 
 		<ol class="breadcrumb">
 			<li><a href="index.html">Home</a></li>
-			<li class="active">About</li>
+			<li class="active">News</li>
 		</ol>
 
 		<div class="row">
