--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -47,31 +47,45 @@
 	<!-- Header -->
 	<header id="head">
 	 <div class="container">
-            <div class="banner-content">
-                <div id="da-slider" class="da-slider">
-                    <div class="da-slide">
-                        <h2 class="text-center">Ink Cartridges</h2>
-                        <div class="da-img"></div>
-                    </div>
-                    <div class="da-slide">
-                        <h2 class="text-center">Drum Cartridges</h2>
-                        <div class="da-img"></div>
-                    </div>
-                    <div class="da-slide">
-                        <h2 class="text-center">Copier Toner Cartridges</h2>
-                        <div class="da-img"></div>
-                    </div>
-                    <div class="da-slide">
-                        <h2 class="text-center">Empty Ink and Toner Cartridges</h2>
-                        <div class="da-img"></div>
-                    </div>
-                    <nav class="da-arrows">
-                        <span class="da-arrows-prev"></span>
-                        <span class="da-arrows-next"></span>
-                    </nav>
-                </div>
-            </div>
-        </div>	
+		 <div id="myCarousel" class="carousel slide">
+			 <!-- 轮播（Carousel）指标 -->
+			 <ol class="carousel-indicators">
+				 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				 <li data-target="#myCarousel" data-slide-to="1"></li>
+				 <li data-target="#myCarousel" data-slide-to="2"></li>
+			 </ol>
+			 <!-- 轮播（Carousel）项目 -->
+			 <div class="carousel-inner">
+				 <div class="item active">
+					 <a href="Products.html">
+					 <img src="assets/images/bg-header1.png" alt="First slide">
+					 </a>
+					 <div class="carousel-caption"></div>
+				 </div>
+				 <div class="item">
+					 <a href="Products.html">
+					 <img src="assets/images/bg-header2.png" alt="Second slide">
+					 </a>
+					 <div class="carousel-caption"></div>
+				 </div>
+				 <div class="item">
+					 <a href="Products.html">
+					 <img src="assets/images/bg-header3.png" alt="Third slide">
+					 </a>
+					 <div class="carousel-caption"></div>
+				 </div>
+			 </div>
+			 <!-- 轮播（Carousel）导航 -->
+			 <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				 <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+				 <span class="sr-only">Previous</span>
+			 </a>
+			 <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				 <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+				 <span class="sr-only">Next</span>
+			 </a>
+		 </div>
+	 </div>
 	</header>
 	<!-- /Header -->
 
