前端页面物品查询功能

--- a/src/main/resources/public/csm/Products.html
+++ b/src/main/resources/public/csm/Products.html
@@ -335,5 +335,11 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/custom.js"></script>
+	<script src="assets/js/getcontent.js"></script>
+    <script>
+        $().ready(function(){
+
+        });
+    </script>
 </body>
 </html>
