物品查询移动到物品页面

--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -116,7 +116,7 @@
                     <p></p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 highlight" onclick="goToProducts('Remanufactured Drum')">
+            <div class="col-md-3 col-sm-6 highlight" onclick="goToProducts('DrumCartridge')">
                 <div class="h-caption"><h4><i class="fa fa-tint fa-2x circle"></i>Drum Cartridges</h4></div>
                 <div class="h-body text-center">
                     <p></p>
@@ -135,7 +135,7 @@
                     <p></p>
                 </div>
             </div>
-            <div class="table-responsive">
+            <!--<div class="table-responsive">
                 <table class="table table-striped" style="TABLE-LAYOUT:fixed;WORD-BREAK:break-all">
                     <thead>
                     <tr>
@@ -155,7 +155,7 @@
             </div>
             <div align="center">
                 <p onclick="getMore()">v more v</p>
-            </div>
+            </div>-->
         </div> <!-- /row  -->
 
     </div>
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="col-md-4 panel contact">
-                    <h3 class="panel-title">Contact Info</h4>
+                    <h3 class="panel-title">Contact Info</h3>
                         <div class="panel-body">
                             <ul>
                                 <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
