物品查询移动到物品页面

--- a/src/main/resources/public/csm/Products.html
+++ b/src/main/resources/public/csm/Products.html
@@ -248,7 +248,7 @@
             document.getElementById("cartridgeType").value = cs.kind;
             getProducts(cs.kind);
         } else {
-            showProduct();
+            showProducts();
         }
 
         // alert(cs.kind);
