物品查询移动到物品页面

--- a/src/main/resources/public/csm/contact.html
+++ b/src/main/resources/public/csm/contact.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
                 <div id="success"></div> <!-- For success/fail messages -->
-                <button type="submit" class="btn btn-primary pull-right">Send</button>
+                <button type="button" class="btn btn-primary pull-right" onclick="sendMsg()">Send</button>
                 <br/>
             </form>
 
@@ -211,7 +211,7 @@
 <script src="assets/js/headroom.min.js"></script>
 <script src="assets/js/jQuery.headroom.min.js"></script>
 <script src="contact/jqBootstrapValidation.js"></script>
-<script src="contact/contact_me.js"></script>
+<script src="assets/js/message.js"></script>
 <script src="assets/js/custom.js"></script>
 
 <!-- Google Maps -->
