product管理系统功能实现

--- a/src/main/resources/public/csm/Products.html
+++ b/src/main/resources/public/csm/Products.html
@@ -167,7 +167,7 @@
                     <th width="15%">No.</th>
                     <th width="17%">Item ID</th>
                     <th width="17%">OEM Code</th>
-                    <th width="17%">color</th>
+                    <th width="17%">Color</th>
                     <th width="17%">Suitable Machine</th>
                     <th width="17%">Page Yield</th>
                 </tr>
