前段页面修改

--- a/src/main/resources/public/csm/Products.html
+++ b/src/main/resources/public/csm/Products.html
@@ -38,7 +38,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="news.html">News</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Support</a></li>
                 <li class="active"><a href="Products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
 
@@ -64,8 +64,7 @@
                 <div class="heading text-center">
                     <!-- Heading -->
                     <h2>Products</h2>
-                    <p>{#替换第一屏1}At lorem Ipsum available, but the majority have suffered alteration in some form by
-                        injected humour.</p>
+                    <p>Please input the model and click QUERY to search what you are looking for.</p>
                 </div>
 
                 <div class="row">
@@ -124,11 +123,11 @@
     <section>
         <div>
             <div id="toolbar-btn" class="btn-group pull-left" style="padding-bottom:10px;">
-                <select id="cartridgeType" value="InkCartridge">
-                    <option value="InkCartridge">InkCartridge</option>
-                    <option value="TonerCartridge">TonerCartridge</option>
-                    <option value="DrumCartridge">DrumCartridge</option>
-                    <option value="EmptyCartridge">EmptyCartridge</option>
+                <select id="cartridgeType" value="InkCartridge" style="height: 34px;">
+                    <option value="InkCartridge">Ink Cartridge</option>
+                    <option value="TonerCartridge">Toner Cartridge</option>
+                    <option value="DrumCartridge">Drum Cartridge</option>
+                    <option value="EmptyCartridge">Empty Cartridge</option>
                 </select>
             </div>
 
@@ -148,11 +147,11 @@
                 </div>
 
                 <div class="btn-group">
-                    <button id="btn_search" onclick="searchProducts()" type="button" class="btn btn-primary btn-space">
+                    <button style="height: 34px;" id="btn_search" onclick="searchProducts()" type="button" class="btn btn-primary btn-space">
                         <span class="fa fa-search" aria-hidden="true" class="btn-icon-space"></span>
                         QUERY
                     </button>
-                    <button id="btn_reset" onclick="resetSearch()" type="button" class="btn btn-default btn-space">
+                    <button style="height: 34px;" id="btn_reset" onclick="resetSearch()" type="button" class="btn btn-default btn-space">
                         <span class="fa fa-eraser" aria-hidden="true" class="btn-icon-space"></span>
                         RESET
                     </button>
@@ -238,7 +237,7 @@
                             <a href="index.html">Home</a> |
                             <a href="about.html">About</a> |
                             <a href="news.html">News</a> |
-                            <a href="services.html">Services</a> |
+                            <a href="services.html">Support</a> |
                             <a href="Products.html">Products</a> |
                             <a href="contact.html">Contact</a>
                         </p>
