--- a/src/main/resources/public/csm/contact.html
+++ b/src/main/resources/public/csm/contact.html
@@ -36,7 +36,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="news.html">News</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Support</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
 
@@ -108,10 +108,11 @@
         <aside class="col-sm-3 sidebar sidebar-right">
 
             <div class="panel contact">
-                <h4>Address</h4>
+                <h4>Contact info</h4>
                 <ul>
                     <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
-                    <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+                    <li><a href="mailto:info@de-color.com.cn"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+                    <li><i class="fa fa-star-o"></i> SKYPE: vivian10566</li>
                     <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
                 </ul>
             </div>
@@ -143,11 +144,12 @@
                 </div>
 
                 <div class="col-md-4 panel contact">
-                    <h3 class="panel-title">Contact Info</h4>
+                    <h3 class="panel-title">Contact Info</h3>
                         <div class="panel-body">
                             <ul>
                                 <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+                                <li><a href="mailto:info@de-color.com.cn"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
+                                <li><i class="fa fa-star-o"></i>SKYPE: vivian10566</li>
                                 <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC
                                 </li>
                             </ul>
@@ -182,7 +184,7 @@
                             <a href="index.html">Home</a> |
                             <a href="about.html">About</a> |
                             <a href="news.html">News</a> |
-                            <a href="services.html">Services</a> |
+                            <a href="services.html">Support</a> |
                             <a href="Products.html">Products</a> |
                             <a href="contact.html">Contact</a>
                         </p>
