--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -36,7 +36,7 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="news.html">News</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Support</a></li>
                 <li><a href="Products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
 
@@ -254,7 +254,7 @@
                             <a href="index.html">Home</a> |
                             <a href="about.html">About</a> |
                             <a href="news.html">News</a> |
-                            <a href="services.html">Services</a> |
+                            <a href="services.html">Support</a> |
                             <a href="Products.html">Products</a> |
                             <a href="contact.html">Contact</a>
                         </p>
