--- a/src/main/resources/public/csm/news.html
+++ b/src/main/resources/public/csm/news.html
@@ -34,7 +34,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li class="active"><a href="news.html">News</a></li>
-					<li><a href="services.html">Services</a></li>
+					<li><a href="services.html">Support</a></li>
 					<li><a href="Products.html">Products</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					
@@ -146,7 +146,7 @@
 								<a href="index.html">Home</a> | 
 								<a href="about.html">About</a> |
 								<a href="news.html">News</a> |
-								<a href="services.html">Services</a> |
+								<a href="services.html">Support</a> |
 								<a href="Products.html">Products</a> |
 								<a href="contact.html">Contact</a> 
 							</p>
