--- a/src/main/resources/public/csm/services.html
+++ b/src/main/resources/public/csm/services.html
@@ -51,43 +51,61 @@
 
 		<ol class="breadcrumb">
 			<li><a href="index.html">Home</a></li>
-			<li class="active">Services</li>
+			<li class="active">Support</li>
 		</ol>
 
 		<div class="row">			
 			<!-- Article content -->
 			<article class="col-sm-12 maincontent">
 				<header class="page-header">
-					<h1 class="page-title">{#替换第一屏1}Services</h1>
+					<h1 class="page-title">Support</h1>
 				</header>
-				<h3>{#替换第一屏1.1}Responsive Website</h3>
-				<p><img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300" > Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<h3>{#替换第一屏1.2}Bootstrap</h3>	
-<p>Standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>				
-				<h3>{#替换第一屏1.3}Lories Ureksil</h3>
-				<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<h3>{#替换第一屏1.4}HTML5 and CSS3</h3>
-				<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>				
-			</article>	
+				<h3>Ink Cartridge Installation</h3>
+				<p style="text-indent: 2em;"><img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300" >
+					1.To install your cartridge simply remove clip or cap from base of ink cartridge (if applicable).
+				</p>
+				<p style="text-indent: 2em;">
+					2.Insert cartridge into printer; ensure cartridge firmly and securely locks into place.
+				</p>
+				<p style="text-indent: 2em;">
+					3.Press OK, yes, close, etc. to bypass any nuisance messages that may appear.
+				</p>
+				<h3>Please Note:</h3>
+				<p style="text-indent: 2em;">
+					You may experience "alerts" from your printer when using refilled cartridges. These nuisance messages are simply deterrents created by manufacturers and can be bypassed by pressing "OK", "proceed", "continue", "accept", etc. Stop the process if an "Unrecognized Cartridge", "Cartridge Error", "Incompatible Cartridge" or "Replace Cartridge" message appears.
+				</p>
+				<h3>Additional Tips:</h3>
+				<p style="text-indent: 2em;">
+					Refill your cartridge promptly after your print quality degrades. When one color begins to fade or run out, it is time to refill the cartridge. You should refill the cartridge as soon as possible after running out. If you continue to print with one color empty, the print head nozzles will be damaged and the cartridge may not refill properly. Until you are ready to transport and refill your empty cartridge it is best to keep the cartridge in the printer, where it is "capped".
+				</p>
+				<p style="text-indent: 2em;">
+					Transport your cartridges properly. Carefully protect your cartridge from the elements. Immediately after removal from the printer, place the cartridge in a sealed envelope and get it refilled within a few days. Leaving a cartridge out for days or weeks will dry the cartridge and may prevent it from being refilled. Keep the cartridge in a 'print head down' position as much as possible. This will keep ink at the print head which minimizes drying out. Do not put your cartridges in a plastic bag because the bag can easily contact the print head and cause ink to leak from the cartridge. On a color cartridge, this can contaminate the colors, resulting in poor print quality with your refill.
+				</p>
+				<p style="text-indent: 2em;">
+					Handle your cartridges carefully. To avoid damage, the print head should not be contacted directly. Do not try to clean the print head; it can be scratched, causing it to fail. During interim storage, keep the cartridge in a cool place away from heat and sunlight. This will help reduce the risk of the cartridge drying out.
+				</p>
+				<p style="text-indent: 2em;">
+					Some printers may continue to display Low On Ink messages; such messages can be ignored or bypassed by pressing ok. As with new cartridges, continue to print until the print quality actually begins to degrade at which time a refill or replacement should be obtained.
+				</p>
+				</article>
 		</div>
 		<div class="row">
                 <div class="col-md-4 col-sm-4">
-                    <h3><i class="fa fa-desktop color"></i>&nbsp; {#替换第二屏1.1}What we do?</h3>
+                    <h3><i class="fa fa-desktop color"></i>&nbsp;What we do?</h3>
                     <!-- Paragraph -->
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>De Color Technology Co., Ltd is specialized in re-manufacturing inkjet cartridges with printheads and the drum cartridges for copiers. With every step of the production strictly controlled and in accordance with international process standard,and the state-of-the-art facilities, we pride ourselves in providing quality remanfactured cartridges.</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
-                    <h3><i class="fa fa-cloud color"></i>&nbsp;{#替换第二屏1.2}Why choose us?</h3>
+                    <h3><i class="fa fa-cloud color"></i>&nbsp;Why choose us?</h3>
                     <!-- Paragraph -->
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>Stringent quality control assures page yield and quality comparable to OEMs. We have the state-of-the-art facility to remanufacture the Cartridges. We use high quality raw material and components. Each cartridge is tested before being shipped.</p>
                 </div>
                 <div class="col-md-4 col-sm-4">
                     <!-- Heading -->
-                    <h3><i class="fa fa-home color"></i>&nbsp;{#替换第二屏1.3}Where are we?</h3>
+                    <h3><i class="fa fa-home color"></i>&nbsp;Where are we?</h3>
                     <!-- Paragraph -->
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit occaecat cupidatat non id est laborum.</p>
+                    <p>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</p>
                 </div>
             </div>
 	</div>	<!-- /container -->
