--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -19,6 +19,23 @@
     <script src="assets/js/html5shiv.js"></script>
     <script src="assets/js/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        /*@-webkit-keyframes move{
+            0%{left:-500px;}
+            100%{left:0;}
+        }
+        #myCarousel{width:600px;height:130px;border:1px solid #000;position:relative;margin:100px auto;
+            overflow: hidden;}
+
+        #carousellist{position:absolute;left:0;top:0;padding:0;margin:0;
+            -webkit-animation:5s move infinite linear;width:200%;}
+
+        #carousellist li{list-style:none;width:120px;height:130px;border:1px solid red;background: pink;
+            color:#fff;text-align: center;float:left;font:normal 50px/2.5em '微软雅黑';}
+
+        #wrap:hover #carousellist{-webkit-animation-play-state:paused;}*/
+
+    </style>
 </head>
 <body>
 <!-- Fixed navbar -->
@@ -51,7 +68,7 @@
     <div class="container">
         <div id="myCarousel" class="carousel slide">
             <!-- 轮播（Carousel）指标 -->
-            <ol class="carousel-indicators">
+            <ol class="carousel-indicators" id="carousellist">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
