--- a/src/main/resources/public/csm/about.html
+++ b/src/main/resources/public/csm/about.html
@@ -106,7 +106,7 @@
 						<ul>
 						  <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
 						  <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
-						  <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
+						  <li><i class="fa fa-flag"></i>5F Block A No. 4 Qianjin 2nd Road Longtang, Tanzhou town, Zhongshan, Guangdong, China</li>
 						</ul> 
 						</div>
 					</div>
