--- a/src/main/resources/public/csm/contact.html
+++ b/src/main/resources/public/csm/contact.html
@@ -113,7 +113,7 @@
                     <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
                     <li><a href="mailto:info@de-color.com.cn"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
                     <li><i class="fa fa-star-o"></i> SKYPE: vivian10566</li>
-                    <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</li>
+                    <li><i class="fa fa-flag"></i>5F Block A No. 4 Qianjin 2nd Road Longtang, Tanzhou town, Zhongshan, Guangdong, China</li>
                 </ul>
             </div>
 
@@ -150,7 +150,7 @@
                                 <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
                                 <li><a href="mailto:info@de-color.com.cn"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
                                 <li><i class="fa fa-star-o"></i>SKYPE: vivian10566</li>
-                                <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC
+                                <li><i class="fa fa-flag"></i>5F Block A No. 4 Qianjin 2nd Road Longtang, Tanzhou town, Zhongshan, Guangdong, China
                                 </li>
                             </ul>
                         </div>
