--- a/src/main/resources/public/csm/index.html
+++ b/src/main/resources/public/csm/index.html
@@ -64,16 +64,16 @@
 <!-- /.navbar -->
 
 <!-- Header -->
-<header id="head">
+<!--<header id="head">
     <div class="container">
         <div id="myCarousel" class="carousel slide">
-            <!-- 轮播（Carousel）指标 -->
+            &lt;!&ndash; 轮播（Carousel）指标 &ndash;&gt;
             <ol class="carousel-indicators" id="carousellist">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#myCarousel" data-slide-to="1"></li>
                 <li data-target="#myCarousel" data-slide-to="2"></li>
             </ol>
-            <!-- 轮播（Carousel）项目 -->
+            &lt;!&ndash; 轮播（Carousel）项目 &ndash;&gt;
             <div class="carousel-inner">
                 <div class="item active">
                     <a href="Products.html">
@@ -94,15 +94,70 @@
                     <div class="carousel-caption"></div>
                 </div>
             </div>
-            <!-- 轮播（Carousel）导航 -->
+            &lt;!&ndash; 轮播（Carousel）导航 &ndash;&gt;
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+                &lt;!&ndash;<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>&ndash;&gt;
                 <span class="sr-only">Previous</span>
             </a>
             <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+                &lt;!&ndash;<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>&ndash;&gt;
                 <span class="sr-only">Next</span>
             </a>
+        </div>
+    </div>
+</header>-->
+<header id="head">
+    <div class="container">
+        <div class='row'>
+            <div class='col-md-12'>
+                <div class="carousel slide" data-ride="carousel" id="quote-carousel">
+                    <!-- Bottom Carousel Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#quote-carousel" data-slide-to="1"></li>
+                        <li data-target="#quote-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Carousel Slides / Quotes -->
+                    <div class="carousel-inner">
+
+                        <!-- Quote 1 -->
+                        <div class="item active">
+                            <blockquote>
+                                <div class="row">
+                                    <div class="col-sm-12 text-center">
+                                        <img class="img-rounded" src="assets/images/bg-header1.png" style="width: 100%;height:100%;">
+                                    </div>
+                                </div>
+                            </blockquote>
+                        </div>
+                        <!-- Quote 2 -->
+                        <div class="item">
+                            <blockquote>
+                                <div class="row">
+                                    <div class="col-sm-12 text-center">
+                                        <img class="img-rounded" src="assets/images/bg-header2.png" style="width: 100%;height:100%;">
+                                    </div>
+                                </div>
+                            </blockquote>
+                        </div>
+                        <!-- Quote 3 -->
+                        <div class="item">
+                            <blockquote>
+                                <div class="row">
+                                    <div class="col-sm-12 text-center">
+                                        <img class="img-rounded" src="assets/images/bg-header3.png" style="width: 100%;height:100%;">
+                                    </div>
+                                </div>
+                            </blockquote>
+                        </div>
+                    </div>
+
+                    <!-- Carousel Buttons Next/Prev -->
+                    <!--<a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
+                    <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>-->
+                </div>
+            </div>
         </div>
     </div>
 </header>
@@ -120,7 +175,7 @@
 <!-- /Intro-->
 
 <!-- Highlights - jumbotron -->
-<div class="jumbotron top-space">
+<div class="jumbotron top-space" style="background-color: #eeeeee">
     <div class="container">
 
         <h2 class="text-center">Here are our products</h2>
@@ -208,7 +263,7 @@
             <!-- Heading -->
             <h3><i class="fa fa-home color"></i>&nbsp;Where are we?</h3>
             <!-- Paragraph -->
-            <p>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC</p>
+            <p>5F Block A No. 4 Qianjin 2nd Road Longtang, Tanzhou town, Zhongshan, Guangdong, China</p>
         </div>
     </div>
 </div>
@@ -237,7 +292,7 @@
                             <ul>
                                 <li><i class="fa fa-phone"></i> (00) 86 158 1272 3629</li>
                                 <li><a href="#"><i class="fa fa-envelope-o"></i> info@de-color.com.cn</a></li>
-                                <li><i class="fa fa-flag"></i>No. 6, Wenyuan Road, Tanzhou, Zhongshan, Guangdong, PRC
+                                <li><i class="fa fa-flag"></i>5F Block A No. 4 Qianjin 2nd Road Longtang, Tanzhou town, Zhongshan, Guangdong, China
                                 </li>
                             </ul>
                         </div>
